--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="en" data-color-scheme="dark">
+  <head>
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta
+      name="description"
+      content="SD-Optim UI created with React"
+    />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
+    <!-- This is the important part! We link to our new stylesheet -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/style.css">
+
     <title>SD-Optim UI</title>
-    <link rel="icon" href="/favicon.ico" />
-</head>
-<body>
+
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-</body>
+  </body>
 </html>
